dds lab2 finish
